ingress/ingress-deply.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-deployment
  namespace: default
  annotations: 
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "100"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 
    nginx.ingress.kubernetes.io/enable-access-log: "false"  
spec:
  rules:
  - host: ingress.my.com
    http:
      paths:
      - path: /ng(/|$)(.*)
        backend:
          serviceName: nginx-service
          servicePort: 80
